ola-parser/src/testdata/syntaxTests/parsing/wrong_compiler_4.sol
pragma solidity ^99.99.0;
contract C {
    fn f() {}
}
// ----
// ParserError 5333: (0-25): Source file requires different compiler version (current compiler is ....
